--- a/instagram_android/app/src/main/AndroidManifest.xml
+++ b/instagram_android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.InstagramClone_android">
+        android:theme="@style/AppTheme.NoTitleBar">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
